--- a/index.html
+++ b/index.html
@@ -1,46 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SG5 Intelligent Solutions</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    html, body {
-      height: 100%;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
-    body {
-      background: url('landing.png') no-repeat center center/cover;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      color: #c3cfff;
-      text-align: center;
-    }
-    h1 {
-      font-size: 4rem;
-      margin-bottom: 0.5em;
-    }
-    h2 {
-      font-size: 2rem;
-      font-weight: 300;
-    }
-    @media (max-width: 768px) {
-      h1 {
-        font-size: 2.5rem;
-      }
-      h2 {
-        font-size: 1.2rem;
-      }
-    }
-  </style>
-</head>
-<body>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>SG5 Intelligent Solutions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="utf-8" />
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <style>
+      @import url("https://fonts.googleapis.com/css?family=Poppins:500,700,400|Inter:500,400|DM+Sans:700,400|Bebas+Neue:700");
+    </style>
+    <link href="tailwind.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="./src/index.jsx"></script>
+  </body>
 </html>
