--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <style>
       @import url("https://fonts.googleapis.com/css?family=Poppins:500,700,400|Inter:500,400|DM+Sans:700,400|Bebas+Neue:700");
-    </style>
+      @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
+      </style>
+      <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@500&display=swap" rel="stylesheet" />
     <link href="tailwind.css" rel="stylesheet" />
   </head>
   <body>
