Feat: New Home Page design partial

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <link rel="icon" type="image/x-icon" href="/favicon.png" />
     <style>
       @import url("https://fonts.googleapis.com/css?family=Poppins:500,700,400|Inter:500,400|DM+Sans:700,400|Bebas+Neue:700");
       @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
